# sensei-demo-sensorhub

./: .clang-format  .clang-format-ignore  .gitignore  .yapfignore  README.md  REUSE.toml  run.fish
.github/workflows/: pre-commit.yml
docs/: plot_timeseries.py
scripts/: serial_to_db.py
serial_to_db/: README.md  serial_to_db.py  serial_to_db.service
src_GAP9/: CMakeLists.txt
src_NRF/: CMakeLists.txt  config.h  i2c_helpers.c  i2c_helpers.h  main.c  prj.conf  test.c  test.h  util.c  util.h
src_NRF/bsp/: pwr_bsp.c  pwr_bsp.h
src_NRF/sensors/: as7331_sensor.c  as7331_sensor.h  bh1730fvc_sensor.c  bh1730fvc_sensor.h  bme688_sensor.c  bme688_sensor.h  ilps28qsw_sensor.c  ilps28qsw_sensor.h  ism330dhcx_sensor.c  ism330dhcx_sensor.h  lis2duxs12_sensor.c  lis2duxs12_sensor.h  max77654_sensor.c  max77654_sensor.h  max_m10s_sensor.c  max_m10s_sensor.h  scd41_sensor.c  scd41_sensor.h  sgp41_sensor.c  sgp41_sensor.h
